Updated version to 1.16.5 and cleaned up the code a little bit too so it'll hopefully be nicer with other mods

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
-# Default ignored files
-/NightVisionFlashBegone.iws
+# gradle
 
-# Project exclude paths
-/.gradle/
-/out/
+.gradle/
+build/
+out/
+classes/
+
+# eclipse
+
+*.launch
+
+# idea
+
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# vscode
+
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# fabric
+
+run/
+/runSecondary/
