--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.4
-	loader_version=0.11.1
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.63
+	loader_version=0.12.3
 
 # Mod Properties
 	mod_version = 1.0.1
 	maven_group = com.ashindigo
 	archives_base_name = nightvisionflashbegone
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.30.0+1.16
